--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Защищенная фото-галерея</title>
+    <title>Галерея Вована</title>
     <style>
         * {
             margin: 0;
@@ -388,7 +388,7 @@
     <!-- Модальное окно для ввода пароля -->
     <div class="modal-overlay" id="passwordModal">
         <div class="modal-content">
-            <h2>Доступ к защищенной галерее</h2>
+            <h2>Доступ к "Галереи Вована</h2>
             <p>Для просмотра фотографий введите код доступа. Код был предоставлен вам ранее.</p>
             
             <div class="password-input-container">
@@ -417,7 +417,7 @@
     <div class="gallery-container" id="galleryContainer">
         <div class="gallery-header">
             <h1>Защищенная фото-галерея</h1>
-            <p>10 эксклюзивных фотографий. Нажмите на любую для просмотра в полном размере.</p>
+            <p>НИКОМУ НЕ ПОКАЗЫВАЙТЕ ЭТИ ФОТОГРАФИИ, ВЫ МОЖЕТЕ ИХ СКАЧИВАТЬ НО НИ В КОЕМ СЛУЧАЕ НЕ ПЕРЕДОВАЙТЕ И НЕ ПОКАЗЫВАЙТЕ ЭТОТ САЙТ</p>
         </div>
         
         <div class="gallery-grid" id="galleryGrid">
