--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     <!-- Модальное окно для ввода пароля -->
     <div class="modal-overlay" id="passwordModal">
         <div class="modal-content">
-            <h2>Доступ к "Галереи Вована</h2>
+            <h2>Доступ к "Галереи Вована"</h2>
             <p>Для просмотра фотографий введите код доступа. Код был предоставлен вам ранее.</p>
             
             <div class="password-input-container">
