--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
     <script>
         // Правильный пароль
-        const correctPassword = "Q$2n&KfQ^287H0t8Rmy6%^Yzc2vZx7Mn0qn8R#Nwt@m&7zF$*n!Z06t*%6ZhL9*!XWbT*Y!3dF%xz5Ub38nm20255Qde32#25NNX";
+        const correctPassword = "!KoP79BBnY";
         
         // Элементы DOM
         const passwordModal = document.getElementById('passwordModal');
